src/deploy/kubernetes/callee-service/application/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: callee-service-application
spec:
  selector:
    matchLabels:
      app: callee-service-application
  replicas: 1
  strategy:
    type: Recreate #RollingUpdate
  template:
    metadata:
      labels:
        app: callee-service-application
    spec:
      # initcontainers justs accepts a docker image, and uses postgres client to check readyness
      containers:
        - name: callee-service-application
          image: goafabric/calle-service:1.0.0-SNAPSHOT
#          imagePullPolicy: IfNotPresent
          imagePullPolicy: Always
          ports:
            - containerPort: 50900
          command: ["java", "-Xms128m", "-Xmx128m",
                    "-Djava.security.egd=file:/dev/./urandom", "-cp", "/app/resources:/app/classes:/app/libs/*",
                    "org.goafabric.calleservice.Application"]
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 50900
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 50900
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 5
          volumeMounts:
            - mountPath: /usr/share/logs
              name: callee-service-applogs
            - mountPath: /usr/share/config/
              name: callee-service-application-config-files-volume

      volumes:
        - name: callee-service-applogs
          emptyDir: {}
        # generated from local file system via "kubectl create configmap" inside stack
        - name: callee-service-application-config-files-volume
          configMap:
            name: callee-service-application-config-files
