src/deploy/kubernetes/callee-service/application/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: callee-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    
    ##Multi Tenancy
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "x-origin-tenant-id: 40a1cab6";

    ##Authentication via Keycloak
    #nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    #nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
spec:
  ## TLS + HTTP2
  tls:
    - hosts:
        - goafabric.org
      secretName: tls-secret
  rules:
    - host: goafabric.org
      http:
        paths:
          - path: /callee/(.*)
            pathType: Prefix
            backend:
              service:
                name: callee-service-application
                port:
                  number: 50900
